Agregada responsividad basica.

--- a/src/sass/Global.sass
+++ b/src/sass/Global.sass
@@ -49,3 +49,13 @@ $duracionTransicion: 100ms
   background-color: var(--colorLab)
   color: white
 
+
+
+@media only screen and (min-width: 777px)
+  .mostrar-en-tablet
+    display: none !important
+
+
+@media only screen and (min-width: 1001px)
+  .mostrar-bajo-1000
+    display: none !important
