Agregado tema claro. Cambiado algunos estilos.

--- a/src/sass/Global.sass
+++ b/src/sass/Global.sass
@@ -1,3 +1,19 @@
+@font-face
+  font-family: "JetBrains Mono"
+  src: url(../assets/jetbrains-mono/JetBrainsMono-Regular.ttf) format("truetype")
+  font-weight: 400
+  font-style: normal
+  font-display: swap
+
+
+@font-face
+  font-family: "JetBrains Mono"
+  src: url(../assets/jetbrains-mono/JetBrainsMono-Bold.ttf) format("truetype")
+  font-weight: bold
+  font-style: normal
+  font-display: swap
+
+
 \:root
   --colorTexto: #d7d7d7
   --colorFondo: #0E1419
@@ -26,7 +42,7 @@ $duracionTransicion: 100ms
 
 .celda
   white-space: pre
-  font-family: "Fira Code", monospace
+  font-family: "JetBrains Mono", monospace
   cursor: pointer
   user-select: none
   transition: background-color $duracionTransicion linear, color $duracionTransicion linear
