Agregado indicador a las filas del horario para visualizar mejor las horas.

--- a/src/sass/colores.sass
+++ b/src/sass/colores.sass
@@ -1,13 +1,15 @@
 .tema-oscuro
   --colorTexto: #d7d7d7
   --colorFondo: #0E1419
+  --colorFondoFila: #162128
   --colorTeoria: #3f77f3
   --colorLab: #e4564a
 
 
 .tema-claro
   --colorTexto: #303030
-  --colorFondo: #EEECEC
+  --colorFondo: #eeecec
+  --colorFondoFila: #dddddd
   --colorTeoria: #2e57b1
   --colorLab: #bb2d21
   .celda
