Agregada opcion de colapsar la barra lateral. Cambiados ciertos colores.

--- a/src/sass/Global.sass
+++ b/src/sass/Global.sass
@@ -45,7 +45,7 @@ $duracionTransicion: 100ms
   font-family: "JetBrains Mono", monospace
   cursor: pointer
   user-select: none
-  transition: background-color $duracionTransicion linear, color $duracionTransicion linear
+  // transition: background-color $duracionTransicion linear, color $duracionTransicion linear
 
 
 .celda__teoria
