--- a/src/sass/colores.sass
+++ b/src/sass/colores.sass
@@ -4,6 +4,8 @@
   --colorFondoFila: #162128
   --colorTeoria: #3f77f3
   --colorLab: #e4564a
+  --colorBorde: #454545
+  --colorHover: #18232b
 
 
 .tema-claro
@@ -12,5 +14,7 @@
   --colorFondoFila: #dddddd
   --colorTeoria: #2e57b1
   --colorLab: #bb2d21
+  --colorBorde: #a9a9a9
+  --colorHover: #cccccc
   .celda
     font-weight: bold
