Agregada funcionalidad para ocultar cursos

--- a/src/sass/Global.sass
+++ b/src/sass/Global.sass
@@ -69,6 +69,9 @@ $duracionTransicion: 100ms
   color: white
 
 
+.celda-oculta
+  display: none
+
 
 @media only screen and (min-width: 777px)
   .mostrar-en-tablet
